--- a/bertclassifiactiontext.ipynb
+++ b/bertclassifiactiontext.ipynb
@@ -1206,7 +1206,9 @@
         "\n",
         "torch.save(model.state_dict(), os.path.join(output_dir, \"model.pt\"))\n",
         "\n",
-        "\n"
+        "tokenizer.save_pretrained(\"saved_model_bert\")\n",
+        "\n",
+        "model.bert.config.to_json_file(\"saved_model_bert/config.json\")\n"
       ]
     }
   ],
